# merge-latex

./: .gitignore  COMMANDS.md  README.md  package.json  pyproject.toml  requirements.txt  setup.py  vercel.json
api/: main.py
pages/: index.html
src/merge_latex/: __init__.py  cli.py  core.py
tests/data/tex_all_in_root/: include_without_macro.tex  main.tex
tests/data/tex_data_and_main_in_separate_folder/main/: main.tex
tests/data/tex_data_in_folder/: main.tex
tests/tex_data_and_main_in_separate_folder/data/: input_with_macro.tex
tests/tex_data_in_folder/data/: include_with_macro.tex  input_without_macro.tex
